# flexynesis

./: .gitignore  Dockerfile  LICENCE  LICENSE  README.md  channels.scm  environment.yml  fix_common_features_order.py  fix_data_types_early_fusion.py  fix_training_concat_order.py  flexynesis-mps.textClipping  guix.scm  manifest.scm  mkdocs.yml  pyproject.toml  requirements.txt  sample.yaml  setup.py  spec-file.txt
.github/workflows/: benchmarks.yml  docker.yml  examples.yml  lint.yml  models-macos-py311.yml  models-macos-py312.yml  models-macos-py313.yml  models-mps.yml  models-template.yml  models-ubuntu-py311.yml  models-ubuntu-py312.yml  models-ubuntu-py313.yml  models.yml  mps-test.yml  tests.yml  tutorials-macos-py311.yml  tutorials-macos-py312.yml  tutorials-macos-py313.yml  tutorials-template.yml  tutorials-ubuntu-py311.yml  tutorials-ubuntu-py312.yml  tutorials-ubuntu-py313.yml  tutorials.yml
docs/: commandline.md  data.md  feature_selection.md  getting_started.md  index.md  main.md  models.crossmodel_pred.md  models.direct_pred.md  models.gnn.md  models.md  models.supervised_vae.md  models.triplet_encoder.md  modules.md  mps_support.md  running_on_galaxy.md  utils.md
docs/flexynesis/: config.html  data.html  data_augmentation.html  feature_selection.html  index.html  main.html  model_DirectPred.html  model_SVAE.html  model_TripletEncoder.html  models_shared.html  modules.html  utils.html
docs/flexynesis/.ipynb_checkpoints/: index-checkpoint.html
docs/flexynesis/models/: direct_pred.html  direct_pred_cnn.html  direct_pred_gcnn.html  index.html  triplet_encoder.html
examples/configs/: hpo_configuration.yaml
examples/tutorials/: brca_subtypes.ipynb  brca_subtypes_cnn.ipynb  cbioportal.ipynb  conf.yaml  gnn_custom_networks.ipynb  modeling_drug_response.ipynb  neuroblastoma_data_integration.ipynb  scrnaseq_bonemarrow.ipynb  survival_subtypes_LGG_GBM.ipynb
flexynesis/: __init__.py  __main__.py  add_gnn_support.py  cli.py  config.py  csv_to_h5.py  data.py  data_augmentation.py  feature_selection.py  generate_coexpression_network.py  h5_dataloader.py  inference.py  main.py  model_DirectPred.py  model_LIMO.py  model_SVAE.py  model_TripletEncoder.py  models.py  models_shared.py  modules.py  test_mps.py  test_mps_wheel.py  utils.py
flexynesis/models/: __init__.py  base_direct_pred.py  crossmodal_pred.py  direct_pred.py  direct_pred_cnn.py  direct_pred_gcnn.py  direct_pred_gnn.py  gnn_early.py  supervised_vae.py  triplet_encoder.py
flexynesis/models/on_ice/: cli.py  direct_pred_gcnn.py  modules_on_ice.py
mps documentation/: MPS_Implementation_Documentation.md  SETUP.md  usage.md
mps-notebooks/: analyse_ccle-gdsc.ipynb  brca_subtypes.ipynb  ccle-gdsc-experiments.sh  ccle-gdsc.md  lgg_gbm.ipynb  safetensors_simple_test.ipynb
tests/: test_mps_device.py
tests/unit/: test_smoke.py
vignettes/: DirectPred.py  limo.py  modeling_drug_response.ipynb  svae.py  svae_ef.py  triplet_encoder.py
